--- a/es6/modules/package.json
+++ b/es6/modules/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "@babel/core": "^7.7.2",
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
-    "webpack": "^4.41.2"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
